--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "pell",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/pell-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "h54s": "2.0.0",
+    "react-datepicker": "3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
