--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pell",
-  "version": "2.0.1",
+  "version": "2.1.0",
   "private": true,
-  "homepage": "/pell-react-tst",
+  "homepage": "/pell-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
