--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pell",
   "version": "2.2.9",
   "private": true,
-  "homepage": "/pell-react-tst",
+  "homepage": "/pell-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
